option editor no longer overflows

--- a/packages/compass-query-bar/src/components/option-editor/option-editor.module.less
+++ b/packages/compass-query-bar/src/components/option-editor/option-editor.module.less
@@ -1,4 +1,3 @@
 .option-editor {
   align-self: center;
-  width: calc(100% - 140px) !important;
 }
