--- a/packages/compass-query-bar/src/components/query-bar/query-bar.module.less
+++ b/packages/compass-query-bar/src/components/query-bar/query-bar.module.less
@@ -95,3 +95,8 @@
 	margin-left: 5px;
 	width: 28px;
 }
+
+.query-option-toggle-row {
+  display: flex;
+  flex-direction: row;
+}
